--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.5.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
